# perp_public_benchmarks

./: LICENSE.txt  README.md
data/: Pipfile  README.md  environment-conda.yml  environment-pip.yml  pyproject.toml  requirements.in
data-science/: environment-conda.yml  environment-pip.yml  requirements.in
utility/: Pipfile  README.md  environment-conda.yml  environment-pip.yml  pyproject.toml  requirements.in
web/: Pipfile  README.md  environment-conda.yml  environment-pip.yml  pyproject.toml  requirements.in
