[tool]
[tool.poetry]
name = "test"
description = ""
authors = ["Recursion"]
version = "0.0.0"

[tool.poetry.dependencies]
python = "*"
pymlconf = ">=1.0.0,<2.0"
google-api-python-client = ">=1.7.6,<2"
hvac = ">=0.7"
pyyaml = ">=3.13,<4"
structlog = ">=18.1,<19"

[[tool.poetry.source]]
name = "pypi"
url = "https://pypi.org/simple/"